--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -89,7 +89,7 @@
           <ion-item-options side="start">
             <ion-item-option color="danger" (click)="delete(farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
           </ion-item-options>
-          <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">
+          <ion-item (click)="farmacoDetailNav(farmaco)">
             <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
               <img id="icon" src="assets/icon/pill.png">
             </ion-thumbnail>
