--- a/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
@@ -8,72 +8,53 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="light">
+<ion-content>
   <ion-grid>
     <ion-row>
     <ion-col style="">
       <form [formGroup]="insertpianoform" id="nuovoPiano">
         <ion-row>
           <ion-col size="12">
-            <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'NOME_PIANO' | translate }}</ion-label>
-                <ion-input formControlName="nome" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'NOME_PIANO_STRING' | translate }}" required="true"></ion-input>
+                <ion-input formControlName="nome" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="medium" inputmode="text" placeholder="{{ 'NOME_PIANO_STRING' | translate }}" required="true"></ion-input>
                 <ion-icon name="person" color="primary" slot="end"></ion-icon>
               </ion-item>
-            </ion-card>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="12">
-            <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_INIZIO_PIANO' | translate }}</ion-label>
                 <ion-datetime formControlName="inizio" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
-            </ion-card>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="12">
-            <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_FINE_PIANO' | translate }}</ion-label>
-                <ion-datetime formControlName="fine" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
+                <ion-datetime  max="2050-12-31" formControlName="fine" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
-            </ion-card>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="12">
-            <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DESCRIZIONE_PIANO' | translate}}</ion-label>
-                <ion-textarea formControlName="descrizione" placeholder="{{ 'DESCRIZIONE_PIANO_STRING' | translate}}"></ion-textarea>
+                <ion-textarea  color="medium" formControlName="descrizione" placeholder="{{ 'DESCRIZIONE_PIANO_STRING' | translate}}"></ion-textarea>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-
-
-
-        <ion-row>
-          <ion-col size="12">
-            <ion-card color="secondary" style="border-radius: 20px">
-              <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="submitPiano()" [disabled]="!insertpianoform.valid">
-                <ion-icon slot="start"  color="light" name="save"></ion-icon>
-                <ion-text color="light">
-                  {{ 'SAVE_BUTTON' | translate }}
-                </ion-text>
-              </ion-button>
-            </ion-card>
           </ion-col>
         </ion-row>
       </form>
     </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-button id="editB" type="submit" expand="full" color="primary" (click)="submitPiano()" [disabled]="!insertpianoform.valid">
+    {{ 'SAVE_BUTTON' | translate }}
+  </ion-button>
+
 </ion-content>
