--- a/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
@@ -23,9 +23,9 @@
         <ion-item>
           <ion-label>{{'QUANTITA_ASSUNZIONE' | translate}}</ion-label>
           <ion-select (ionChange)="selectQuantita($event)">
-            <ion-select-option>1/4</ion-select-option>
-            <ion-select-option>1/3</ion-select-option>
-            <ion-select-option>1/2</ion-select-option>
+            <ion-select-option>0.25</ion-select-option>
+            <ion-select-option>0.50</ion-select-option>
+            <ion-select-option>0.75</ion-select-option>
             <ion-select-option selected>1</ion-select-option>
             <ion-select-option>2</ion-select-option>
             <ion-select-option>3</ion-select-option>
