non hai medicinali nel piano I18N

--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -109,7 +109,7 @@
 
     <div *ngIf="(farmacipiani$ | async)?.length==0 && !showLeftTab">
         <ion-item lines="none" text-center="true" style="padding-top: 50%">
-          <ion-text color="medium">Non hai medicinali nel piano ... premi il +</ion-text>
+          <ion-text color="medium">{{'NO_MED_PIANO' | translate}}</ion-text>
         </ion-item>
     </div>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed" *ngIf="!showLeftTab">
