--- a/Ionic - DailyPills/myApp/src/app/pages/edit-info-piano/edit-info-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/edit-info-piano/edit-info-piano.page.html
@@ -26,7 +26,7 @@
             <ion-col size="12">
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_INIZIO_PIANO' | translate }}</ion-label>
-                <ion-datetime formControlName="inizio" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
+                <ion-datetime placeholder="{{pianodetail.inizio}}" formControlName="inizio" displayFormat="YYYY-MM-DD" value="{{pianodetail.inizio}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-col>
@@ -35,7 +35,7 @@
             <ion-col size="12">
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_FINE_PIANO' | translate }}</ion-label>
-                <ion-datetime  max="2050-12-31" formControlName="fine" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
+                <ion-datetime  max="2050-12-31" formControlName="fine" displayFormat="YYYY-MM-DD" value="{{pianodetail.fine}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-col>
@@ -53,7 +53,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button id="editB" type="submit" expand="full" color="primary" (click)="submitPiano()" [disabled]="!insertpianoform.valid">
+  <ion-button id="editB" type="submit" expand="full" color="primary" (click)="updatePiano()" [disabled]="!insertpianoform.valid">
     {{ 'SAVE_BUTTON' | translate }}
   </ion-button>
 
