--- a/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
@@ -26,6 +26,11 @@
       </ion-item-sliding>
     </ion-list>
   </div>
+  <div *ngIf="(listfavorites$ | async)?.length==0">
+    <ion-item lines="none" text-center="true" style="padding-top: 50%">
+      <ion-text color="medium">{{'NO_MED_ARMADIETTO_SCEGLI_FARMACO' | translate}}</ion-text>
+    </ion-item>
+  </div>
   <div *ngIf="!listfavorites$">
     <ion-list>
       <ion-item>
