--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -29,6 +29,11 @@
           </ion-item-sliding>
       </ion-list>
     </div>
+    <div *ngIf="(listfavorites$ | async)?.length==0">
+        <ion-item lines="none" text-center="true" style="padding-top: 50%">
+            <ion-text color="medium">{{'NO_MED_ARMADIETTO' | translate}}</ion-text>
+        </ion-item>
+    </div>
     <div *ngIf="!listfavorites$">
         <ion-list>
         <ion-item>
