--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title color="light">{{'ARMADIETTO_TAB' | translate}}</ion-title>
+    <ion-title color="light">{{'DETTAGLI_PIANO' | translate}}</ion-title>
   </ion-toolbar>
   <ion-grid>
     <ion-row *ngIf="showLeftTab">
