--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -8,6 +8,9 @@
 
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="refreshHome($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-item lines="none" text-center="true">
     <ion-label color="primary">{{todaystring$}}</ion-label>
   </ion-item>
