--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -14,7 +14,6 @@
   <ion-item lines="none" text-center="true">
     <ion-label color="primary">{{todaystring$}}</ion-label>
   </ion-item>
-
   <ion-list no-padding lines="none" *ngFor="let farmaco of farmacipiani$ | async" >
     <ion-list-header>
       <ion-text color="primary">{{farmaco.orarioassunzione}}</ion-text>
@@ -25,12 +24,21 @@
       </ion-thumbnail>
       <ion-label (click)="farmacoDetailNav(farmaco)">
         <h2>{{farmaco.farmaco.nome}}</h2>
-        <p>©: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
-        <p>#: {{farmaco.quantitagiorno}} pezzi</p>
+        <p><ion-icon name="filing"></ion-icon>  {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+        <p><ion-icon name="medical"></ion-icon>  {{farmaco.quantitagiorno}} pezzi</p>
       </ion-label>
-      <ion-item>
-        <ion-checkbox (click)="addAssunzione(farmaco.id)" [disabled]="farmaco.assunto" [checked]="farmaco.assunto"></ion-checkbox>
-      </ion-item>
+      <div *ngIf="!farmaco.assunto">
+        <ion-item>
+          <ion-icon name="square-outline"></ion-icon>
+          <!--<ion-checkbox (click)="addAssunzione(farmaco.id)" [disabled]="farmaco.assunto" [checked]="farmaco.assunto"></ion-checkbox>-->
+        </ion-item>
+      </div>
+      <div *ngIf="farmaco.assunto">
+        <ion-item>
+          <ion-icon name="checkbox-outline"></ion-icon>
+          <!--<ion-checkbox (click)="addAssunzione(farmaco.id)" [disabled]="farmaco.assunto" [checked]="farmaco.assunto"></ion-checkbox>-->
+        </ion-item>
+      </div>
     </ion-item>
   </ion-list>
 
@@ -39,4 +47,5 @@
       <ion-text color="medium">{{'NO_MED_OGGI' | translate}}</ion-text>
     </ion-item>
   </div>
+
 </ion-content>
