--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -14,7 +14,7 @@
   <ion-item lines="none" text-center="true">
     <ion-label color="primary">{{todaystring$}}</ion-label>
   </ion-item>
-  <ion-list no-padding lines="none" *ngFor="let farmaco of farmacipiani$ | async" >
+  <ion-list no-padding lines="none" *ngFor="let farmaco of arrayFarmaci" >
     <ion-list-header>
       <ion-text color="primary">{{farmaco.orarioassunzione}}</ion-text>
     </ion-list-header>
@@ -27,24 +27,16 @@
         <p><ion-icon name="filing"></ion-icon>  {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
         <p><ion-icon name="medical"></ion-icon>  {{farmaco.quantitagiorno}} pezzi</p>
       </ion-label>
-<<<<<<< HEAD
-      <ion-item>
-        <ion-checkbox (click)="addAssunzione(farmaco.id)" [(ngModel)]="farmaco.assunto"></ion-checkbox>
-      </ion-item>
-=======
       <div *ngIf="!farmaco.assunto">
         <ion-item>
-          <ion-icon name="square-outline"></ion-icon>
-          <!--<ion-checkbox (click)="addAssunzione(farmaco.id)" [disabled]="farmaco.assunto" [checked]="farmaco.assunto"></ion-checkbox>-->
+          <ion-icon (click)="addAssunzione(farmaco.id)" name="square-outline"></ion-icon>
         </ion-item>
       </div>
       <div *ngIf="farmaco.assunto">
         <ion-item>
           <ion-icon name="checkbox-outline"></ion-icon>
-          <!--<ion-checkbox (click)="addAssunzione(farmaco.id)" [disabled]="farmaco.assunto" [checked]="farmaco.assunto"></ion-checkbox>-->
         </ion-item>
       </div>
->>>>>>> 279fa91d2e17baa4c0ff043187ed12bcce373d08
     </ion-item>
   </ion-list>
 
