--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -29,7 +29,7 @@
       </ion-label>
       <div *ngIf="!farmaco.assunto">
         <ion-item>
-          <ion-icon (click)="alertAssunzione(farmaco.id)" name="square-outline"></ion-icon>
+          <ion-icon (click)="alertAssunzione(farmaco.id, farmaco.medtype)" name="square-outline"></ion-icon>
         </ion-item>
       </div>
       <div *ngIf="farmaco.assunto">
