Controllo gionro[Done]

--- a/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
@@ -35,13 +35,13 @@
         <ion-item>
           <ion-label>{{'GIORNO_ASSUNZIONE' | translate}}</ion-label>
           <ion-select (ionChange)="selectedMultipleDays($event)" multiple>
-            <ion-select-option selected>Lunedi</ion-select-option>
-            <ion-select-option>Martedi</ion-select-option>
-            <ion-select-option>Mercoledi</ion-select-option>
-            <ion-select-option>Giovedi</ion-select-option>
-            <ion-select-option>Venerdi</ion-select-option>
-            <ion-select-option>Sabato</ion-select-option>
-            <ion-select-option>Domenica</ion-select-option>
+            <ion-select-option selected>lunedì</ion-select-option>
+            <ion-select-option>martedì</ion-select-option>
+            <ion-select-option>mercoledì</ion-select-option>
+            <ion-select-option>giovedì</ion-select-option>
+            <ion-select-option>venerdì</ion-select-option>
+            <ion-select-option>sabato</ion-select-option>
+            <ion-select-option>domenica</ion-select-option>
           </ion-select>
         </ion-item>
       </ion-card>
