--- a/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.scss
@@ -8,3 +8,9 @@ ion-datetime {
   right: 10px;
   bottom: 20px;
 }
+
+#logout {
+  background-color: transparent;
+  --box-shadow: transparent;
+  box-shadow: none !important;
+}
