back button senza testo

--- a/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary" style="padding: 20px;">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button text=""></ion-back-button>
     </ion-buttons>
     <ion-searchbar placeholder="{{ 'CERCA_MEDICINA' | translate }}" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>
   </ion-toolbar>
