--- a/Ionic - DailyPills/myApp/src/app/pages/edit-info-piano/edit-info-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/edit-info-piano/edit-info-piano.page.html
@@ -2,7 +2,7 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button mode="ios"></ion-back-button>
+      <ion-back-button mode="ios" text=""></ion-back-button>
     </ion-buttons>
     <ion-title color="light">{{ 'EDIT_PIANO_TAB' | translate }}</ion-title>
   </ion-toolbar>
