--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-assunzione/dettaglio-assunzione.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-assunzione/dettaglio-assunzione.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary" mode="ios">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button text=""></ion-back-button>
     </ion-buttons>
     <ion-title color="light">{{'DETTAGLIO_ASSUNZIONE_TAB' | translate}}</ion-title>
   </ion-toolbar>
