--- a/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
@@ -2,7 +2,7 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary" mode="ios">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button text=""></ion-back-button>
     </ion-buttons>
     <ion-title color="light">{{'SCEGLI_FARMACO_TAB' | translate}}</ion-title>
   </ion-toolbar>
