fix flex direction

--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -30,7 +30,7 @@
       </ion-list>
     </div>
     <div *ngIf="(listfavorites$ | async)?.length==0">
-        <ion-item lines="none" text-center="true" style="padding-top: 50%">
+        <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
             <ion-text color="medium">{{'NO_MED_ARMADIETTO' | translate}}</ion-text>
         </ion-item>
     </div>
