--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -41,7 +41,7 @@
   </ion-list>
 
   <div *ngIf="(farmacipiani$ | async)?.length==0">
-    <ion-item lines="none" text-center="true" style="padding-top: 50%">
+    <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
       <ion-text color="medium">{{'NO_MED_OGGI' | translate}}</ion-text>
     </ion-item>
   </div>
