--- a/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.scss
@@ -10,7 +10,7 @@ ion-datetime {
 }
 
 #logout {
-  background-color: transparent !important;
+  background-color: transparent;
   --box-shadow: transparent;
   box-shadow: none !important;
   color: transparent !important;
