--- a/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
@@ -31,7 +31,7 @@
     </ion-list>
   </div>
   <div *ngIf="(pianilist$ | async)?.length==0">
-    <ion-item lines="none" text-center="true" style="padding-top: 50%">
+    <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
       <ion-text color="medium">{{'NO_PIANI' | translate}}</ion-text>
     </ion-item>
   </div>
