--- a/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
@@ -21,7 +21,7 @@
                             <ion-col size="12">
                                 <ion-item class="ion-item-border">
                                     <ion-label color="primary" position="floating">{{ 'REGISTER_NAME' | translate }}</ion-label>
-                                    <ion-input formControlName="surname" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_NAME_STRING' | translate }}" required="true"></ion-input>
+                                    <ion-input formControlName="name" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_NAME_STRING' | translate }}" required="true"></ion-input>
                                     <ion-icon name="person" color="primary" slot="end"></ion-icon>
                                 </ion-item>
                             </ion-col>
@@ -39,7 +39,7 @@
                             <ion-col size="12">
                                 <ion-item class="ion-item-border">
                                     <ion-label color="primary" position="floating">{{ 'EMAIL' | translate }}</ion-label>
-                                    <ion-input formControlName="surname" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_EMAIL_STRING' | translate }}" required="true"></ion-input>
+                                    <ion-input formControlName="email" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_EMAIL_STRING' | translate }}" required="true"></ion-input>
                                     <ion-icon name="mail" color="primary" slot="end"></ion-icon>
                                 </ion-item>
                             </ion-col>
