--- a/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
@@ -4,7 +4,7 @@
 <ion-header translucent text-center>
     <ion-toolbar color="primary" mode="ios">
         <ion-title color="light">{{'IMPOSTAZIONI_TAB' | translate}}</ion-title>
-        <ion-button id="logout" slot="end">
+        <ion-button (click)="LogOut()" id="logout" slot="end">
             <ion-icon name="log-out" color="light"></ion-icon>
             <ion-label color="light">{{'LOGOUT_MENU' | translate}}</ion-label>
         </ion-button>
