centrati msg errore

--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -31,7 +31,7 @@
     </div>
     <div *ngIf="(listfavorites$ | async)?.length==0">
         <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
-            <ion-text color="medium">{{'NO_MED_ARMADIETTO' | translate}}</ion-text>
+            <ion-label color="medium">{{'NO_MED_ARMADIETTO' | translate}}</ion-label>
         </ion-item>
     </div>
     <div *ngIf="!listfavorites$">
