--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -40,10 +40,10 @@
     </ion-item>
   </ion-list>
 
-  <div *ngIf="(farmacipiani$ | async)?.length==0">
-    <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
-      <ion-text color="medium">{{'NO_MED_OGGI' | translate}}</ion-text>
-    </ion-item>
+  <div *ngIf="(farmacipiani$ | async)?.length==0" style="justify-content: center">
+          <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%; justify-content: center;">
+            <ion-label color="medium" text-center="true" style="justify-content: center">{{'NO_MED_OGGI' | translate}}</ion-label>
+          </ion-item>
   </div>
 
 </ion-content>
