--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -109,7 +109,7 @@
 
     <div *ngIf="(farmacipiani$ | async)?.length==0 && !showLeftTab">
         <ion-item id="errore" lines="none" text-center="true" style="padding-top: 50%">
-          <ion-text color="medium">{{'NO_MED_PIANO' | translate}}</ion-text>
+          <ion-label color="medium">{{'NO_MED_PIANO' | translate}}</ion-label>
         </ion-item>
     </div>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed" *ngIf="!showLeftTab">
